crates/verdin-migrate/tests/snapshots/sql_snapshots__evolve_postgres.snap
---
source: crates/verdin-migrate/tests/sql_snapshots.rs
expression: render(&plan)
---
-- rename column articles.title to headline [safe]
ALTER TABLE "articles" RENAME COLUMN "title" TO "headline";

-- create table tags [safe]
CREATE TABLE "tags" (
  "id" bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "document_id" char(26) NOT NULL,
  "locale" varchar(16) NOT NULL DEFAULT '',
  "publication_state" smallint NOT NULL,
  "published_at" timestamptz(3),
  "created_at" timestamptz(3) NOT NULL,
  "updated_at" timestamptz(3) NOT NULL,
  "created_by_id" bigint,
  "updated_by_id" bigint,
  "label" varchar(255)
);

-- add column articles.rating [safe]
ALTER TABLE "articles" ADD COLUMN "rating" double precision;

-- alter column articles.views [risky]
ALTER TABLE "articles" ALTER COLUMN "views" TYPE bigint USING "views"::bigint;

-- alter column articles.publish_on [risky]
ALTER TABLE "articles" ALTER COLUMN "publish_on" TYPE timestamptz(3) USING "publish_on"::timestamptz(3);

-- drop column articles.featured [destructive]
ALTER TABLE "articles" DROP COLUMN "featured";

-- create unique index articles_rating_uq [risky]
CREATE UNIQUE INDEX "articles_rating_uq" ON "articles" ("rating", "locale", "publication_state");

-- create unique index tags_document_uq [safe]
CREATE UNIQUE INDEX "tags_document_uq" ON "tags" ("document_id", "locale", "publication_state");

-- create index tags_state_idx [safe]
CREATE INDEX "tags_state_idx" ON "tags" ("publication_state", "locale");
