crates/verdin-migrate/tests/snapshots/sql_snapshots__evolve_sqlite.snap
---
source: crates/verdin-migrate/tests/sql_snapshots.rs
expression: render(&plan)
---
-- rename column articles.title to headline [safe]
ALTER TABLE "articles" RENAME COLUMN "title" TO "headline";

-- create table tags [safe]
CREATE TABLE "tags" (
  "id" integer PRIMARY KEY AUTOINCREMENT,
  "document_id" text NOT NULL,
  "locale" text NOT NULL DEFAULT '',
  "publication_state" integer NOT NULL,
  "published_at" text,
  "created_at" text NOT NULL,
  "updated_at" text NOT NULL,
  "created_by_id" integer,
  "updated_by_id" integer,
  "label" text
);

-- add column articles.rating [safe]
ALTER TABLE "articles" ADD COLUMN "rating" real;

-- drop column articles.featured [destructive]
ALTER TABLE "articles" DROP COLUMN "featured";

-- create unique index articles_rating_uq [risky]
CREATE UNIQUE INDEX "articles_rating_uq" ON "articles" ("rating", "locale", "publication_state");

-- create unique index tags_document_uq [safe]
CREATE UNIQUE INDEX "tags_document_uq" ON "tags" ("document_id", "locale", "publication_state");

-- create index tags_state_idx [safe]
CREATE INDEX "tags_state_idx" ON "tags" ("publication_state", "locale");
