crates/verdin-migrate/tests/snapshots/sql_snapshots__sqlite_rebuilds_tables_for_type_changes.snap
---
source: crates/verdin-migrate/tests/sql_snapshots.rs
expression: render(&plan)
---
-- rebuild table articles [destructive]
CREATE TABLE "_vd_new_articles" (
  "id" integer PRIMARY KEY AUTOINCREMENT,
  "document_id" text NOT NULL,
  "locale" text NOT NULL DEFAULT '',
  "publication_state" integer NOT NULL,
  "published_at" text,
  "created_at" text NOT NULL,
  "updated_at" text NOT NULL,
  "created_by_id" integer,
  "updated_by_id" integer,
  "title" text,
  "slug" text,
  "body" text,
  "views" text,
  "price" text,
  "publish_on" text,
  "seo" text,
  "summary" text
);
INSERT INTO "_vd_new_articles" ("id", "document_id", "locale", "publication_state", "published_at", "created_at", "updated_at", "created_by_id", "updated_by_id", "title", "slug", "body", "views", "price", "publish_on", "seo") SELECT "id", "document_id", "locale", "publication_state", "published_at", "created_at", "updated_at", "created_by_id", "updated_by_id", "title", "slug", "body", "views", "price", "publish_on", "seo" FROM "articles";
DROP TABLE "articles";
ALTER TABLE "_vd_new_articles" RENAME TO "articles";
CREATE UNIQUE INDEX "articles_document_uq" ON "articles" ("document_id", "locale", "publication_state");
CREATE INDEX "articles_state_idx" ON "articles" ("publication_state", "locale");
CREATE UNIQUE INDEX "articles_slug_uq" ON "articles" ("slug", "locale", "publication_state");
